--- a/cal.html
+++ b/cal.html
@@ -211,9 +211,8 @@ h2 .fa
             </div>
         </div>
      
-   <h2>soft <span>SCIENTIFIC</span><br>CALCI <br> <i style="font-size: 100px;" class="fa fa-reply"></i></h2>
-    <h3>Creating By Mr.Tom</h3>
-       
+   <h2>soft <span>SCIENTIFIC</span><br>CALCI <br> Creating by Mr.Tom <br> <i style="font-size: 100px;" class="fa fa-reply"></i></h2>
+   
 </body>
 <script>
     var screen=document.querySelector('#screen');
